# skillens

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
scripts/: demo.py  demo.tape
skillens/: cli.py  mcp_server.py
skillens/core/: config.py  dataset.py  evaluator.py  models.py  scorer.py
skillens/data/: skill_demand.json
skillens/discovery/: ranker.py  searcher.py
skillens/display/: compare.py  i18n.py  json_output.py  report.py
skillens/llm/: anthropic.py  base.py  factory.py  nollm.py  ollama.py  openai.py  prompts.py
skillens/market/: trends.py
skillens/profile/: manager.py  matcher.py
skillens/providers/: arxiv.py  base.py  coursera.py  github_repo.py  registry.py  webpage.py  youtube.py
tests/: test_cli_entrypoint.py
tests/core/: test_compare.py  test_confidence.py  test_config.py  test_deep_scorer.py  test_phase4.py  test_scorer.py
tests/profile/: test_profile.py
tests/providers/: test_coursera.py  test_detection.py
